# figaro

./: .gitignore  README.md  deploy.sh  dev_setup.sh  figaro.code-workspace  result.json  setup.py  test2.json
docs/: README.md
examples/: chat1.py  chat2.py  chat_console.py  chat_short_term_memory.py  dev_setup.sh  json.py  structured_object.py  turnchat.py  tutorial.ipynb  vertex_ai_list.py  vertex_ai_simple.py
figaro/: README.md  __init__.py  chain.py  setup.py
figaro-ai/: pyproject.toml
figaro-ai-chat/: README.md  pyproject.toml
figaro-ai-chat/figaro_ai_chat/: __init__.py  chat_session.py  mock.py
figaro-ai-chat/figaro_ai_chat/history_stores/: __init__.py  base.py  temp_disk.py
figaro-ai-chat/figaro_ai_chat/models/: __init__.py
figaro-ai-memory/figaro_memory/: figaro_memory.py  pyproject.toml
figaro-ai-tools/: pyproject.toml
figaro-ai-tools/figaro_ai_tools/: __init__.py  slide_generator.py
figaro-ai-tools/figaro_tools/: __init__.py
figaro-ai/figaro_ai/: __init__.py  executor.py  types.py
figaro/agents/: base_agent.py
figaro/figaro/: __init__.py  executor.py
figaro/llms/: __init__.py  base_llm.py  vertex_ai.py
figaro/memory/: base_memory.py  zep.py
figaro/tools/: __init__.py  base_tool.py  (+1 more)
figaro_ai/: pyproject.toml
figaro_ai/figaro_ai/: executor.py
figaro_ai/figaro_ai/llms/: __init__.py  vertex_ai.py  web_generation_ui.py
figaro_ai/figaro_ai/memory/: zep.py
figaro_chat/: design_notes.md  pyproject.toml  setup.py
figaro_memory/: README.md  design_notes.md  notes.md  pyproject.toml  setup.py
figaro_tools/: README.md
(+25 files in other folders)
